fixing z-index bug in datepicker in relation with sticky table headers

--- a/assets/stylesheets/whitewall.css
+++ b/assets/stylesheets/whitewall.css
@@ -257,6 +257,12 @@ body li {
 }
 
 /* JQUERY UI MODs */
+#from, #to {
+	position: relative;
+	z-index: 500;
+}
+
+
 .ui-progressbar {
 	height: 6px !important;
 	
